[package]
name = "mutiny-data-recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bip39 = "2.0.0"
lnurl-rs = "0.2.7"
bitcoin = { version = "0.29.2", default-features = false, features = ["no-std"] }
clap = { version = "4.1.14", features = ["derive"] }
mutiny-core = "0.4.26"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
