[package]
name = "mutiny-data-recovery"
version = "0.1.0"
edition = "2021"
authors = ["benthecarman <ben@mutinywallet.com>"]
description = "A tool for recovering Mutiny Wallets that end up in an unrecoverable state"
license = "MIT"
homepage = "https://github.com/mutinywallet/mutiny-data-recovery"
repository = "https://github.com/mutinywallet/mutiny-data-recovery"

[[bin]]
name = "mutiny-data-recovery"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bip39 = "2.0.0"
lnurl-rs = "0.4.1"
clap = { version = "4.1.14", features = ["derive"] }
mutiny-core = { git = "https://github.com/MutinyWallet/mutiny-node.git", rev = "04ceb6a7fa159307c9195f6456cece5204589d33" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# need to pin these to a specific release
lightning-liquidity = "=0.1.0-alpha.3"
fedimint-ln-common = "=0.3.0"
fedimint-ln-client = "=0.3.0"

[patch.crates-io]
lightning = { git = 'https://github.com/MutinyWallet/rust-lightning.git', rev = "e660e068f6f93b13dc782b2d607795716b48ed15" }
lightning-invoice = { git = 'https://github.com/MutinyWallet/rust-lightning.git', rev = "e660e068f6f93b13dc782b2d607795716b48ed15" }
lightning-rapid-gossip-sync = { git = 'https://github.com/MutinyWallet/rust-lightning.git', rev = "e660e068f6f93b13dc782b2d607795716b48ed15" }
lightning-background-processor = { git = 'https://github.com/MutinyWallet/rust-lightning.git', rev = "e660e068f6f93b13dc782b2d607795716b48ed15" }
lightning-transaction-sync = { git = 'https://github.com/MutinyWallet/rust-lightning.git', rev = "e660e068f6f93b13dc782b2d607795716b48ed15" }
lightning-net-tokio = { git = 'https://github.com/MutinyWallet/rust-lightning.git', rev = "e660e068f6f93b13dc782b2d607795716b48ed15" }
